tests/ui/moves/invalid-suggestions-destructuring-assignment-drop.stderr
error[E0509]: cannot move out of type `Thing`, which implements the `Drop` trait
  --> $DIR/invalid-suggestions-destructuring-assignment-drop.rs:12:34
   |
LL |     Thing(*&mut String::new()) = Thing(String::new());
   |           -------------------    ^^^^^^^^^^^^^^^^^^^^ cannot move out of here
   |           |
   |           data moved here
   |           move occurs because the place has type `String`, which does not implement the `Copy` trait

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0509`.
